# bustabit-tracker

./: AGENTS.md  bustabit.html  components.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-windows.yml
docs/: bustabit-provably-fair.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: backtester-page.tsx  chart-editor.tsx  dashboard-grid.tsx  dashboard-renderer.tsx  dashboard-section.tsx  dashboard.tsx  navbar.tsx  progress-dialog.tsx  red-streaks.tsx  view-editor.tsx
src/components/ui/: alert-dialog.tsx  toggle.tsx
src/components/widgets/: chart-widget.tsx  stat-widget.tsx  tabs-widget.tsx  uplot-chart.tsx
src/lib/: ai-prompt.ts  backtester.ts  dashboard-spec.ts  layout.ts  query.ts  views.ts  widget-spec.ts
